--- a/play.html
+++ b/play.html
@@ -7,17 +7,17 @@
 <style>
   :root{
     --ink:#0b1b2b; --ink-2:#132a40; --paper:#f7f6f3; --line:#d9d7d2; --muted:#6a7380;
-    --up:#1f7a5e; --down:#b02a2a; --card:#ffffff; --shadow:0 14px 34px rgba(9,18,28,.12);
+    --up:#1f7a5e; --down:#b02a2a; --card:#ffffff; --shadow:0 14px 34px rgba(9,18,28,0.12);
   }
   *{box-sizing:border-box}
-  body{margin:0;color:var(--ink);font-family:ui-serif,Georgia,"Times New Roman",Times,serif;
-    background:radial-gradient(1200px 900px at 10% -20%,#fbfaf7,var(--paper) 60%,#f0efe9 100%),linear-gradient(180deg,#fbfbfb,#f0efe9 80%)}
-  a{color:#276fca;text-decoration:none}
+  body{margin:0;color:var(--ink);font-family:ui-serif,Georgia,"Times New Roman",Times,serif;background:
+    radial-gradient(1200px 900px at 10% -20%,#fbfaf7,var(--paper)60%,#f0efe9 100%),
+    linear-gradient(180deg,#fbfbfb,#f0efe9 80%);}
   header{position:sticky;top:0;z-index:30;background:linear-gradient(180deg,rgba(255,255,255,.9),rgba(255,255,255,0));border-bottom:1px solid var(--line);backdrop-filter:saturate(140%) blur(8px)}
   .wrap{max-width:1100px;margin:0 auto;padding:0 18px}
   .nav{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
   .title{margin:0;font-size:18px;color:var(--ink-2)}
-  .layout{display:grid;grid-template-columns:1.1fr .9fr;gap:16px;padding:18px 0} @media(max-width:980px){.layout{grid-template-columns:1fr}}
+  .layout{display:grid;grid-template-columns:1.1fr .9fr;gap:16px;padding:18px 0}@media(max-width:980px){.layout{grid-template-columns:1fr}}
   .card{border:1px solid var(--line);border-radius:16px;background:var(--card);box-shadow:var(--shadow)}
   .in{padding:18px}
   .article{border:1px solid var(--line);border-radius:14px;background:#fff;overflow:hidden}
@@ -27,8 +27,8 @@
   .h{font-size:24px;line-height:1.25;margin:14px;font-weight:800}
   .deck{margin:0 14px 8px;color:#4a5563}
   .by{margin:0 14px 14px;color:#6b7280;font-size:12px}
-  .topbar{display:flex;justify-content:space-between;gap:12px;margin-bottom:8px}.mono{font-variant-numeric:tabular-nums;font-family:ui-monospace,SFMono-Regular,Menlo,monospace}
-  .pill{display:inline-flex;gap:8px;align-items:center;padding:4px 10px;border:1px solid var(--line);border-radius:999px;background:#f4f7fa;font-size:12px;font-weight:800;color:#445}
+  .topbar{display:flex;justify-content:space-between;gap:12px;margin-bottom:8px}
+  .mono{font-variant-numeric:tabular-nums;font-family:ui-monospace,SFMono-Regular,Menlo,monospace}
   .buttons{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
   .btn{appearance:none;border:1px solid var(--line);border-radius:12px;cursor:pointer;padding:12px 16px;font-weight:900;background:#f6f9ff}
   .btn.up{background:linear-gradient(180deg,#e6f4ee,#d8efe6);border-color:#cde6db}
@@ -36,7 +36,7 @@
   .btn.skip{background:linear-gradient(180deg,#fdf8e8,#fff2c8)}
   .toast{position:fixed;left:50%;top:10px;transform:translateX(-50%);padding:10px 14px;border-radius:12px;background:#0b1b2b;color:#fff;opacity:0;pointer-events:none;transition:opacity .15s ease}
   .toast.show{opacity:.98}
-  .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:12px} @media(max-width:520px){.grid-2{grid-template-columns:1fr}}
+  .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:12px}@media(max-width:520px){.grid-2{grid-template-columns:1fr}}
   .kpi{border:1px solid var(--line);border-radius:12px;padding:12px;background:#fff}.lab{color:var(--muted);font-size:12px}.val{font-weight:900}
   footer{padding:18px 0;color:#6a7380;font-size:12px;border-top:1px solid var(--line);text-align:center}
 </style>
@@ -45,7 +45,6 @@
 <header><div class="wrap nav"><h1 class="title">Crystal Ball — Play</h1><a href="index.html">← Back</a></div></header>
 
 <main class="wrap layout">
-  <!-- Game -->
   <div class="card"><div class="in">
     <div class="topbar mono"><div>Month <span id="i">0</span>/<span id="n">0</span></div><div>Bank: <span id="bank">₹0</span></div></div>
     <div class="article" aria-label="Article">
@@ -55,21 +54,20 @@
       <p id="by" class="by"></p>
     </div>
     <div class="buttons">
-      <button class="btn up"   id="up">▲ UP</button>
+      <button class="btn up" id="up">▲ UP</button>
       <button class="btn down" id="down">▼ DOWN</button>
       <button class="btn skip" id="skip">Skip</button>
-      <button class="btn"      id="start">Start</button>
+      <button class="btn" id="start">Start</button>
     </div>
     <p class="mono" style="margin-top:8px;color:#6a7380">Monthly cadence. We settle using the NIFTY 50 month‑end close vs prior month‑end close. Choosing auto‑advances.</p>
   </div></div>
 
-  <!-- Scoreboard -->
   <div class="card"><div class="in">
     <div class="grid-2">
-      <div class="kpi"><div class="lab">Starting bank</div><div id="sb"   class="val mono">₹0</div></div>
-      <div class="kpi"><div class="lab">Current bank</div>  <div id="cb"   class="val mono">₹0</div></div>
-      <div class="kpi"><div class="lab">Right / Wrong</div> <div id="rw"   class="val mono">0 / 0</div></div>
-      <div class="kpi"><div class="lab">Skips</div>         <div id="sk"   class="val mono">0</div></div>
+      <div class="kpi"><div class="lab">Starting bank</div><div id="sb" class="val mono">₹0</div></div>
+      <div class="kpi"><div class="lab">Current bank</div><div id="cb" class="val mono">₹0</div></div>
+      <div class="kpi"><div class="lab">Right / Wrong</div><div id="rw" class="val mono">0 / 0</div></div>
+      <div class="kpi"><div class="lab">Skips</div><div id="sk" class="val mono">0</div></div>
       <div class="kpi"><div class="lab">Avg monthly return</div><div id="am" class="val mono">0.00%</div></div>
       <div class="kpi"><div class="lab">Annualized (CAGR)</div><div id="cagr" class="val mono">0.00%</div></div>
     </div>
@@ -80,100 +78,90 @@
 <footer><div class="wrap"><p>Educational prototype. Headlines use real‑style sources (e.g., Reuters/official). In production, we wire verified links + actual NIFTY closes for each item.</p></div></footer>
 
 <script>
-/* ------- Utilities ------- */
+// Utilities
 function INR(n){try{return n.toLocaleString('en-IN',{style:'currency',currency:'INR',maximumFractionDigits:0});}catch(e){return '₹'+Math.round(n).toLocaleString('en-IN');}}
 function pct(x){return (x).toFixed(2)+'%';}
 function mean(a){return a.length? a.reduce((m,x)=>m+x,0)/a.length : 0;}
-function cagr(start, end, months){ if(months<=0) return 0; return Math.pow(end/start, 12/months)-1; }
-function toast(msg){ const t=document.getElementById('toast'); t.textContent=msg; t.classList.add('show'); setTimeout(()=>t.classList.remove('show'), 1100); }
+function cagr(start,end,months){if(months<=0)return 0;return Math.pow(end/start,12/months)-1;}
+function toast(msg){const t=document.getElementById('toast');t.textContent=msg;t.classList.add('show');setTimeout(()=>t.classList.remove('show'),1100);}
 function humanReason(r){
-  // Simple “conversation” snippets keyed to surprising outcomes
-  if(r.expect === 'up' && r.pct < 0) return "Felt bullish, still fell — positioning and profit‑taking can overpower good news.";
-  if(r.expect === 'down' && r.pct > 0) return "Looked scary, finished green — markets had already priced the fear in.";
-  if(Math.abs(r.pct) < 0.2) return "Headline noise, muted index — breadth rotated under the hood.";
-  return "It’s difficult — headlines ≠ outcomes, flows matter.";
+  if(r.expect==='up'&&r.pct<0)return 'Felt bullish, still fell — positioning and profit‑taking can overpower good news.';
+  if(r.expect==='down'&&r.pct>0)return 'Looked scary, finished green — markets had already priced the fear in.';
+  if(Math.abs(r.pct)<0.2)return 'Headline noise, muted index — breadth rotated under the hood.';
+  return 'It’s difficult — headlines ≠ outcomes, flows matter.';
 }
 
-/* ------- State ------- */
-const START=1000000; // ₹10,00,000
-let i=-1, bank=START, wins=0, losses=0, skips=0, monthsPlayed=0, monthRets=[]; // monthRets store underlying % per decision
+// State
+const START=1000000;
+let i=-1, bank=START, wins=0, losses=0, skips=0, monthsPlayed=0, monthRets=[];
 
-/* ------- DOM ------- */
-const eI  = document.getElementById('i'), eN  = document.getElementById('n');
+// DOM
+const eI=document.getElementById('i'), eN=document.getElementById('n');
 const eBANK=document.getElementById('bank'), eDATE=document.getElementById('date');
-const eH  = document.getElementById('headline'), eD  = document.getElementById('deck'), eBY = document.getElementById('by');
-const eUP = document.getElementById('up'), eDN = document.getElementById('down'), eSK = document.getElementById('skip'), eST = document.getElementById('start');
-const eSB = document.getElementById('sb'), eCB = document.getElementById('cb'), eRW = document.getElementById('rw'), eSKS= document.getElementById('sk'), eAM = document.getElementById('am'), eCAGR=document.getElementById('cagr');
-const eToast=document.getElementById('toast');
+const eH=document.getElementById('headline'), eD=document.getElementById('deck'), eBY=document.getElementById('by');
+const eSB=document.getElementById('sb'), eCB=document.getElementById('cb'), eRW=document.getElementById('rw'), eSKS=document.getElementById('sk'), eAM=document.getElementById('am'), eCAGR=document.getElementById('cagr');
+const eUP=document.getElementById('up'), eDN=document.getElementById('down'), eSK=document.getElementById('skip'), eST=document.getElementById('start');
 
-/* ------- Data load ------- */
+// Data
 let PACK=[];
 fetch('data/questions.json').then(r=>r.json()).then(init);
 
 function init(rows){
-  PACK = rows; // [{date, month, headline, url, source, expect, nifty_close, prev_close, pct}]
-  eN.textContent = String(PACK.length);
+  PACK=rows;
+  eN.textContent=String(PACK.length);
   [eSB,eCB,eBANK].forEach(el=>el.textContent=INR(START));
   updateScore();
 }
 
-function shuffle(a){for(let k=a.length-1;k>0;k--){const j=Math.floor(Math.random()*(k+1));[a[k],a[j]]=[a[j],a[k]];}return a;}
 function updateScore(){
   eCB.textContent=INR(bank); eBANK.textContent=INR(bank);
   eRW.textContent=`${wins} / ${losses}`; eSKS.textContent=String(skips);
-  const avg = monthRets.length? mean(monthRets):0; eAM.textContent=pct(avg);
-  const k = monthsPlayed? cagr(START, bank, monthsPlayed)*100 : 0; eCAGR.textContent=pct(k);
+  const avg=monthRets.length? mean(monthRets):0; eAM.textContent=pct(avg);
+  const k=monthsPlayed? cagr(START,bank,monthsPlayed)*100 : 0; eCAGR.textContent=pct(k);
 }
-function enable(b){[eUP,eDN,eSK].forEach(x=>{x.disabled=!b;x.style.opacity=b?1:.6;});}
+function enableButtons(b){[eUP,eDN,eSK].forEach(btn=>{btn.disabled=!b;btn.style.opacity=b?1:0.6;});}
+
+function shuffle(a){for(let k=a.length-1;k>0;k--){const j=Math.floor(Math.random()*(k+1));[a[k],a[j]]=[a[j],a[k]];}return a;}
 
 function start(){
   shuffle(PACK); i=-1; bank=START; wins=0; losses=0; skips=0; monthsPlayed=0; monthRets=[];
   eI.textContent='0'; eH.textContent='Ready. Press UP or DOWN when the headline appears.'; eD.textContent='Monthly headline, as published.'; eBY.textContent='';
-  updateScore(); enable(true); next();
+  updateScore(); enableButtons(true); next();
 }
 function next(){
   i+=1; if(i>=PACK.length){ return finish(); }
-  const r=PACK[i];
-  eI.textContent=String(i+1);
-  eDATE.textContent = `${r.month || ''} • ${r.date}`;
-  eH.textContent = r.headline;
-  eD.textContent = r.deck || '';
-  const src = r.source || 'Source'; const link = r.url ? `<a href="${r.url}" target="_blank" rel="noopener">link</a>` : '';
-  eBY.innerHTML = `${src}${link? ' • ' + link : ''}`;
+  const r=PACK[i]; eI.textContent=String(i+1);
+  eDATE.textContent=`${r.month||''} • ${r.date}`; eH.textContent=r.headline; eD.textContent=r.deck||'';
+  let linkPart=r.url?` • <a href=\"${r.url}\" target=\"_blank\" rel=\"noopener\">link</a>`:''; eBY.innerHTML=`${r.source||'Source'}${linkPart}`;
 }
-function decide(dir){ // +1 up, -1 down, 0 skip
-  const r=PACK[i]; const m = Number(r.pct); // underlying month % change
-  if(dir===0){ skips+=1; toast('Skipped'); setTimeout(next, 500); updateScore(); return; }
-  const correct = (m>0 && dir>0) || (m<0 && dir<0) || (m===0);
-  correct ? wins++ : losses++;
-  const rr = dir*m; const pnl = bank*(rr/100); bank = Math.max(0, bank+pnl);
+function decide(dir){
+  const r=PACK[i], m=Number(r.pct);
+  if(dir===0){skips++; toast('Skipped'); setTimeout(next,500); updateScore(); return;}
+  const correct=(m>0&&dir>0)||(m<0&&dir<0)||(m===0);
+  correct?wins++:losses++;
+  const rr=dir*m; const pnl=bank*(rr/100); bank=Math.max(0,bank+pnl);
   monthsPlayed++; monthRets.push(m);
-  const verdict = correct? 'Right' : 'Wrong';
-  toast(`${verdict} • ${rr>=0?'+':'−'}${Math.abs(rr).toFixed(2)}% — ${humanReason(r)}`);
-  updateScore(); setTimeout(next, 900);
+  toast(`${correct?'Right':'Wrong'} • ${rr>=0?'+':'−'}${Math.abs(rr).toFixed(2)}% — ${humanReason(r)}`);
+  updateScore(); setTimeout(next,900);
 }
 function finish(){
-  enable(false);
-  const accPct = (wins+losses)>0 ? Math.round((wins/(wins+losses))*100) : 0;
-  const k = monthsPlayed ? cagr(START, bank, monthsPlayed)*100 : 0;
-  const leadTrail = k>=0 ? `you are ${k.toFixed(2)}% ahead` : `you are ${Math.abs(k).toFixed(2)}% behind`;
-  let advisory = '';
-  if(accPct>=65 && k>5){
-    advisory = "Nice run. Even so, anchoring with high‑quality fixed income can stabilise outcomes when headlines mislead.";
-  }else if(accPct>=50 && k>=0){
-    advisory = "Decent reads. A core fixed‑income allocation helps smooth the journey—and protects gains when markets zigzag.";
-  }else{
-    advisory = "Tough tape. This is why a reliable fixed‑income base matters—so your plan isn’t hostage to monthly surprises.";
-  }
+  enableButtons(false);
+  const accPct=(wins+losses)>0?Math.round((wins/(wins+losses))*100):0;
+  const k=monthsPlayed? cagr(START,bank,monthsPlayed)*100 : 0;
+  const leadTrail=k>=0?`you are ${k.toFixed(2)}% ahead`:`you are ${Math.abs(k).toFixed(2)}% behind`;
+  let advisory='';
+  if(accPct>=65&&k>5){advisory='Nice run. Even so, anchoring with high‑quality fixed income can stabilise outcomes when headlines mislead.';}
+  else if(accPct>=50&&k>=0){advisory='Decent reads. A core fixed‑income allocation helps smooth the journey—and protects gains when markets zigzag.';}
+  else{advisory='Tough tape. This is why a reliable fixed‑income base matters—so your plan isn’t hostage to monthly surprises.';}
   alert(`You got ${wins} out of ${wins+losses} right, which means ${leadTrail}. ${advisory}`);
 }
 
-/* events */
-document.getElementById('up').onclick   = ()=>decide(+1);
-document.getElementById('down').onclick = ()=>decide(-1);
-document.getElementById('skip').onclick = ()=>decide(0);
-document.getElementById('start').onclick= start;
-window.addEventListener('keydown',(e)=>{const k=e.key.toLowerCase();if(k==='u')decide(+1);if(k==='d')decide(-1);if(k==='s')decide(0);});
+// Bind events
+eUP.onclick=()=>decide(+1);
+eDN.onclick=()=>decide(-1);
+eSK.onclick=()=>decide(0);
+eST.onclick=start;
+window.addEventListener('keydown',e=>{const k=e.key.toLowerCase();if(k==='u')decide(+1);if(k==='d')decide(-1);if(k==='s')decide(0);});
 </script>
 </body>
 </html>
